--- a/src/main/resources/templates/fragments/fragment-zh.html
+++ b/src/main/resources/templates/fragments/fragment-zh.html
@@ -11,8 +11,8 @@
         <h2><a href="home-zh">J&F國際責任有限公司</a></h2>
     </div>
     <div class='nav' id="lang">
-        <li><a href="/"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">英文</a></li>
-        <li><a href="home-vn"><img src="img/vietnamese.png" alt="vn-flag" class="lang-logo" id="vn-logo">越南文</a></li>
+        <li><a href="/"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">English</a></li>
+        <li><a href="home-vn"><img src="img/vietnamese.png" alt="vn-flag" class="lang-logo" id="vn-logo">Tiếng Việt</a></li>
         <li><a href="home-zh"><img src="img/taiwanese.png" alt="tw-flag" class="lang-logo" id="tw-logo">繁體中文</a></li>
     </div>
     </header>
