--- a/src/main/resources/templates/vn/contact-vn.html
+++ b/src/main/resources/templates/vn/contact-vn.html
@@ -20,7 +20,7 @@
   <div class="contact">
   <form id="contForm" action="https://formsubmit.co/96ec9e9ff78dacb5644415762b695dbd" method="POST">
     <h2>Liên hệ</h2>
-    <p>Liên hệ với chúng tôi dưới đây</p><br>
+    <p>Vui lòng liên hệ với chúng tôi dưới đây</p><br>
     <input type="text" name="tên" placeholder="Họ và tên"><br><br>
     <input type="email" name="email" placeholder="email"><br><br>
     <input type="number" name="điện thoại" placeholder="Số điện thoại"><br><br>
