--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -26,7 +26,7 @@ button{
     border-radius: 20px;
     align-items: center;
     text-align: center;
-    font-family: sans-serif;
+    font-family: "Roboto";
     font-size: 48px;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
