--- a/src/main/resources/templates/fragments/fragment-vn.html
+++ b/src/main/resources/templates/fragments/fragment-vn.html
@@ -11,9 +11,9 @@
         <h2><a href="home-vn">CÔNG TY TNHH QUỐC TẾ J&F</a></h2>
     </div>
     <div class='nav' id="lang">
-        <li><a href="home-en"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">Tiếng Anh</a></li>
+        <li><a href="home-en"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">English</a></li>
         <li><a href="home-vn"><img src="img/vietnamese.png" alt="vn-flag" class="lang-logo" id="vn-logo">Tiếng Việt</a></li>
-        <li><a href="home-zh"><img src="img/taiwanese.png" alt="tw-flag" class="lang-logo" id="tw-logo">Tiếng Trung(Phồn Thể)</a></li>
+        <li><a href="home-zh"><img src="img/taiwanese.png" alt="tw-flag" class="lang-logo" id="tw-logo">繁體中文</a></li>
     </div>
     </header>
 
