fixed narrow aisle pictures not showing

--- a/src/main/resources/templates/products-zh/narrowaisle-zh.html
+++ b/src/main/resources/templates/products-zh/narrowaisle-zh.html
@@ -22,8 +22,8 @@ lối đi hẹp, very narrow aisle" />
         <div class="single-img"><img src="img/narrowaisle/narrowaisle1.JPG" alt="窄巷道料架"></div>
         <div class="single-img"><img src="img/narrowaisle/narrowaisle2.jpg" alt="窄巷道料架"></div>
         <div class="single-img"><img src="img/narrowaisle/narrowaisle3.jpg" alt="窄巷道料架"></div>
-        <div class="single-img"><img src="img/narrowaisle/narrowaisle4.JPG" alt="窄巷道料架"></div>
-        <div class="single-img"><img src="img/narrowaisle/narrowaisle5.JPG" alt="窄巷道料架"></div>
+        <div class="single-img"><img src="img/narrowaisle/narrowaisle4.jpg" alt="窄巷道料架"></div>
+        <div class="single-img"><img src="img/narrowaisle/narrowaisle5.jpg" alt="窄巷道料架"></div>
     </div>
 </div>
 
