--- a/src/main/resources/templates/products/narrowaisle.html
+++ b/src/main/resources/templates/products/narrowaisle.html
@@ -22,8 +22,8 @@
         <div class="single-img"><img src="img/narrowaisle/narrowaisle1.JPG" alt=""></div>
         <div class="single-img"><img src="img/narrowaisle/narrowaisle2.jpg" alt=""></div>
         <div class="single-img"><img src="img/narrowaisle/narrowaisle3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/narrowaisle/narrowaisle4.JPG" alt=""></div>
-        <div class="single-img"><img src="img/narrowaisle/narrowaisle5.JPG" alt=""></div>
+        <div class="single-img"><img src="img/narrowaisle/narrowaisle4.jpg" alt=""></div>
+        <div class="single-img"><img src="img/narrowaisle/narrowaisle5.jpg" alt=""></div>
     </div>
 </div>
 
