--- a/src/main/resources/templates/vn/index-vn.html
+++ b/src/main/resources/templates/vn/index-vn.html
@@ -15,7 +15,7 @@
   <section id="home">
     <div class="quote">
       <h1>CÔNG TY TNHH QUỐC TẾ J&F</h1><br>
-      <p>Công ty chúng tôi chuyên thiết kế, sản xuất, lắp đặt hệ thống kệ trữ hàng trong kho, các cửa hàng lớn, siêu thị. <br>
+      <p>Công ty chúng tôi chuyên thiết kế, sản xuất, lắp đặt hệ thống kệ kho trữ hàng cho các cửa hàng, siêu thị lớn. <br>
         <a id="a1">Xem thêm các sản phẩm của chúng tôi?</a></p>
       <br><a href="products-vn"><button type="submit"id="seemore">Xem thêm</button></a>
     </div>
