--- a/src/main/resources/templates/fragments/fragment-en.html
+++ b/src/main/resources/templates/fragments/fragment-en.html
@@ -61,7 +61,7 @@
     <div class="footer">
         <h3>Address</h3>
         <p>
-            C2-18, Da Den Industrial Zone, <br>Phu Tan Ward, Thu Dau Mot City, <br>Binh Duong Province, Viet Nam
+            C2-18, Da Den Industrial Zone, <br>Binh Duong Ward, Ho Chi Minh City, <br>Viet Nam
         </p>
     </div>
 
