--- a/src/main/resources/templates/fragments/fragment-vn.html
+++ b/src/main/resources/templates/fragments/fragment-vn.html
@@ -60,7 +60,7 @@
     <div class="footer">
         <h3>Địa chỉ</h3>
         <p>
-            Lô C2-18, KCN Đại Đăng,<br> P.Phú Tân, TP.Thủ Dầu Một, <br>T.Bình Dương, Việt Nam
+            Lô C2-18, KCN Đại Đăng,<br> Phường Bình Dương, <br>Thành phố Hồ Chí Minh, Việt Nam
         </p>
     </div>
 
