--- a/src/main/resources/templates/fragments/fragment-zh.html
+++ b/src/main/resources/templates/fragments/fragment-zh.html
@@ -61,7 +61,7 @@
     <div class="footer">
         <h3>地址</h3>
         <p>
-            越南平陽省<br>土龍木市復興坊<br>大登工業區C2-18號
+            越南胡志明市<br>平陽坊大登工業區<br>C2-18號
         </p>
     </div>
 
