--- a/src/main/resources/templates/vn/contact-vn.html
+++ b/src/main/resources/templates/vn/contact-vn.html
@@ -32,7 +32,7 @@
     <h2>Thông tin liên hệ</h2><br><br>
       <h3>CÔNG TY TNHH QUỐC TẾ J&F</h3><br><br>
     <h3>Địa chỉ</h3>
-      <p>Lô C2-18, KCN Đại Đăng, Phường Phú Tân, <br>Thành Phố Thủ Dầu Một, Tỉnh Bình Dương, Việt Nam</p><br>
+      <p>Lô C2-18, KCN Đại Đăng, Phường Bình Dương, <br>Thành phố Hồ Chí Minh, Việt Nam</p><br>
     <h3>Liên hệ</h3>
       <p>Tel: +84-274-3624200</p>
       <p>Mr. Liu: +84-946-766866</p>
