--- a/src/main/resources/templates/zh/contact-zh.html
+++ b/src/main/resources/templates/zh/contact-zh.html
@@ -32,7 +32,7 @@
     <h2>聯繫方式</h2><br><br>
       <h3>J&F國際責任有限公司</h3><br><br>
     <h3>地址</h3>
-      <p>越南平陽省<br>土龍木市復興坊<br>大登工業區C2-18號</p><br>
+      <p>越南胡志明市平陽坊大登工業區C2-18號</p><br>
     <h3>聯絡</h3>
       <p>電話: +84-274-3624200</p>
       <p>劉先生: +84-946-766866</p>
